# mingk42-movData

./: README.md  pyproject.toml
src/movdata/: cli.py  mcd.py  ml.py  mld.py  utils.py
tests/: test_mc.py  test_mcd.py  test_ml.py  test_mld.py
