[project]
name = "movData"
version = "0.4.1"
description = "movie api application"
authors = [
    {name = "Mingk42", email = "xoals123456t@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
movdata-ping="movdata.cli:ping"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath="src"
